--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "jvmti"
-version = "0.1.0"
+version = "0.2.0"
 authors = [ "Alex Pecsi <alex.pecsi@gmail.com>" ]
 description = "Rust bindings for the JVM TI"
 keywords = [ "java", "jvm", "jvmti", "debugger" ]
 
 [lib]
-crate_type = [ "dylib" ]
+crate_type = [ "dylib", "rlib" ]
 
 [dependencies]
 libc = "0.2.*"
@@ -15,3 +15,6 @@ log = "0.3.*"
 time = "0.1.34"
 regex = "0.1.*"
 lazy_static = "0.1.*"
+
+[dependencies.zmq]
+git = "https://github.com/erickt/rust-zmq.git"
