--- a/jvmti/Cargo.toml
+++ b/jvmti/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "void"
+name = "jvmti"
 version = "0.3.0"
 authors = [ "Alex Pecsi <xea@blacklight.so>" ]
-description = "JVM Monitoring and profiling agent"
+description = "Rust bindings for the JVM TI"
 keywords = [ "java", "jvm", "jvmti", "debugger" ]
 
 [lib]
 crate_type = [ "dylib", "rlib" ]
-path = "agent/src/lib.rs"
 
 [dependencies]
-jvmti = { path = "jvmti" }
-agent = { path = "agent" }
+libc = "0.2.*"
+time = "0.1.34"
+lazy_static = "0.1.*"
