Emulator working a bit

--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -7,7 +7,7 @@ keywords = [ "java", "jvm", "jvmti", "debugger" ]
 [dependencies]
 jvmti = { path = "../jvmti" }
 libc = "0.2.*"
-time = "0.1.34"
+time = "0.1.*"
 lazy_static = "0.1.*"
 
 [lib]
