--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ keywords = [ "java", "jvm", "jvmti", "debugger" ]
 crate_type = [ "dylib", "rlib" ]
 
 [dependencies]
+libc = "0.2.*"
+time = "0.1.*"
+lazy_static = "0.1.*"
