Update client code

--- a/java/agent.conf
+++ b/java/agent.conf
@@ -1,6 +1,10 @@
 agent_name = "Test"
-entry_points = []
+entry_points = [
+    ".Hello.main",
+    "java.io.OutputStream.flush"
+]
 active_classes = [
+    "Hello",
     "java/util/Queue",
     "java/net/URLConnection"
 ]
