--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ crate_type = [ "cdylib", "dylib", "rlib" ]
 libc = "0.2.*"
 time = "0.1.*"
 lazy_static = "0.2.*"
-toml = "0.3.*"
-serde = "*"
-serde_derive = "*"
+toml = "0.4.*"
+serde = "1.0.*"
+serde_derive = "1.0.*"
